# CLICPerformance

./: .travis.yml  CMakeLists.txt  README  README.md
.github/workflows/: coverity.yml  key4hep.yml  linux.yml
.travis-ci.d/: compile_and_test.sh
Calorimetry/: testCalibJetStudies.xml
Calorimetry/include/: JetAnalyzer.h  ShowerStudy.h  TrueMCintoRecoForJets.h
Calorimetry/python/: .gitignore  jetResolution.py
Calorimetry/python/jetResolution/: helperFunctions.py  histPool.py
Calorimetry/src/: JetAnalyzer.cc  ShowerStudy.cxx  TrueMCintoRecoForJets.cc
Flavour_tagging/: Flavtag_performance.C  Job_example.py  README.md  training.xml  vtx_makentp.xml
Macros/: README  plotter.py
Tests/: CMakeLists.txt  yyxyev_000.stdhep
Tracking/include/: ClicEfficiencyCalculator.h  ClicTrackingValidate.h  HitResiduals.h  LinkDef.h  SkimSecondaryVertices.h  TrackChecker.h  fpcompare.h
Tracking/src/: ClicEfficiencyCalculator.cc  ClicTrackingValidate.cc  HitResiduals.cc  SkimSecondaryVertices.cc  TrackChecker.cc
Visualisation/CLIC_o3_v06_CED/: CLIC_o3_v06_CED.xml  ECalBarrel_o2_v01_01.xml  InnerTracker_o2_v01_01.xml  Solenoid_o1_v01_01.xml  Vertex_o2_v06_01.xml  ced2go-template-DD4.xml
Visualisation/FCCee_o1_v03_CED/: ECalBarrel_o2_v01_03.xml  FCCee_o1_v03_CED.xml  InnerTracker_o2_v01_01.xml  LumiCal_o3_v02_02.xml  Solenoid_o1_v01_02.xml  Vertex_o4_v05.xml  ced2go-template-DD4.xml
clicConfig/: clicReconstruction.xml  clic_steer.py
clicConfig/CalibrationPandoraSettings/: PandoraSettingsPhotonTraining.xml
doc/: ReleaseNotes.md
etc/: extra-root.supp
examples/: clicReconstruction.xml  clic_steer.py  fccReconstruction.xml  gear_test.xml  lcio_geant4.py  lcio_particle_gun.py  run_CLIC_o2_v03_mu_15deg.xml  run_CLIC_o2_v03_mu_85deg.xml  testClicBuild.sh
examples/PandoraSettings/: PandoraLikelihoodData9EBin.xml  PandoraSettingsDefault.xml
examples/PandoraSettingsFCCee/: PandoraLikelihoodData9EBin.xml  PandoraSettingsDefault.xml
fcceeConfig/: fccReconstruction.xml  fcc_steer.py
fcceeConfig/CalibrationPandoraSettings/: PandoraSettingsPhotonTraining.xml
fcceeConfig/PandoraSettingsFCCee/: PandoraLikelihoodData9EBin_400nsCalTimeWindow.xml  PandoraSettingsDefault.xml  PandoraSettingsDefault_400nsCalTimeWindow.xml
source/Conditions/include/: CLICRecoConfig.h
source/Conditions/src/: CLICRecoConfig.cc
